Update formatting of search form

--- a/index.html
+++ b/index.html
@@ -60,19 +60,22 @@
               <h3 id="metric-select-f">ºF</h3>
             </div>
 
-            <div class="col-5 search">
-              <form id="search-field">
-                <input
-                  action="input"
-                  type="text"
-                  placeholder="Search for a city"
-                  autocomplete="off"
-                  autofocus="on"
-                  id="city-search"
-                />
-                <input type="submit" value="Search" />
-              </form>
-            </div>
+            <form id="search-form" class="mb-3">
+              <div class="row">
+                <div class="col-5">
+                  <input
+                    type="search"
+                    placeholder="Enter a city name..."
+                    class="form-control"
+                    id="city-input"
+                    autocomplete="off"
+                  />
+                </div>
+                <div class="col-2">
+                  <input type="submit" value="Search" class="btn btn-primary" />
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
