Update #feel to include Farenheit marker
#feel does not convert to ºC

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </form>
 
           <div class="overview">
-            <h1 id="city">Austin</h1>
+            <h1 id="city"></h1>
             <div class="d-flex weather-temperature">
               <img src="" alt="" id="icon" />
               <div>
@@ -62,7 +62,7 @@
               </div>
               <div class="col" id="weather-details">
                 <ul>
-                  <li>Feels like: <span id="feel"></span>º</li>
+                  <li>Feels like: <span id="feel"></span>ºF</li>
                   <li>Humidity: <span id="humidity"> </span>%</li>
                   <li>Wind: <span id="wind"></span>mph</li>
                 </ul>
